# kitsune

./: .gitignore  BUSINESS.md  CAPABILITIES.md  CLAUDE.md  LICENSE  QUEST-KITSUNE-001.md  README.md  glama.json  pyproject.toml
.github/workflows/: ci.yml
src/kitsune/: __init__.py  __main__.py  cli.py  config.py  consent.py  mcp_server.py
src/kitsune/graph/: build.py  nodes.py  router.py  state.py
src/kitsune/inference/: backend.py  mlx_backend.py  ollama_backend.py
src/kitsune/prompts/: loader.py  templates.py
src/kitsune/prompts/skills/: csharp.md  java.md  php.md  ruby.md  swift.md  typescript.md
src/kitsune/providers/: __init__.py  base.py  registry.py
src/kitsune/rag/: base.py  bm25_backend.py  chroma_backend.py
tests/: test_backend.py  test_consent.py  test_graph.py  test_loader.py  test_providers.py  test_router.py
tests/benchmark/: arena_eval.py  rag_compare.py  rag_results.json
tests/e2e/: test_smoke.py
tests/fixtures/: sample_go.go  sample_javascript.js  sample_python.py
