[project]
name = "kitsune"
version = "0.1.0"
description = "Local code assistant — SLMs orchestrated with LangGraph"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "typer>=0.15",
    "rich>=14.0",
    "pydantic-settings>=2.8",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.12",
]
rag = [
    "langchain-chroma>=0.2",
    "langchain-huggingface>=0.2",
]
fallback = [
    "anthropic>=0.50",
]

[project.scripts]
kit = "kitsune.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
